Add PX-W3PE5 definitions
Add PX-W3PE5 definitions
(tnx https://trading-diary.net/plex-px-w3pe5-tvtest/)

--- a/doc/WinSCard-x3U4/WinSCard.ini
+++ b/doc/WinSCard-x3U4/WinSCard.ini
@@ -1,4 +1,4 @@
-; Plex PX-Q3PE4/Plex PX-W3PE4/Plex PX-Q3U4/Plex PX-W3U4/e-Better DTV02-5T-P/e-Better DTV02-1T1S-U内臓カードリーダーのWinSCard.dll用のiniファイル
+; Plex PX-Q3PE4/Plex PX-W3PE4/Plex PX-W3PE5/Plex PX-Q3U4/Plex PX-W3U4/e-Better DTV02-5T-P/e-Better DTV02-1T1S-U内臓カードリーダーのWinSCard.dll用のiniファイル
 [SCard]
 ;
 ; デバッグログを記録するかどうか(YESで有効)
@@ -9,9 +9,10 @@ DetailLog=NO
 ;
 ; カードリーダーとして使用するチューナーのFriendlyName（PX-W3U4の場合）
 TunerFriendlyName="PXW3U4 Multi Tuner ISDB-T BDA Filter #0"
-; PX-Q3U4/PX-W3PE4/PX-Q3PE4/DTV02-5T-P/DTV02-1T1S-Uの場合は上記の行を消して下記該当行の先頭の";"を取り除く
+; PX-Q3U4/PX-W3PE4/PX-W3PE5/PX-Q3PE4/DTV02-5T-P/DTV02-1T1S-Uの場合は上記の行を消して下記該当行の先頭の";"を取り除く
 ;TunerFriendlyName="PXQ3U4 Multi Tuner ISDB-T BDA Filter #0"
 ;TunerFriendlyName="PXW3PE4 Multi Tuner ISDB-T BDA Filter #0"
+;TunerFriendlyName="PXW3PE5 Multi Tuner ISDB-T BDA Filter #0"
 ;TunerFriendlyName="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #0"
 ;TunerFriendlyName="PXMLT5PE Multi Tuner Dual Mode ISDB BDA Filter #0"
 ;TunerFriendlyName="ISDBT6013 Multi Tuner ISDB-T BDA Filter #0"
