--- a/doc/BonDriver_PX_x3U4_T.ini
+++ b/doc/BonDriver_PX_x3U4_T.ini
@@ -1,4 +1,4 @@
-; PX-W3U4/Q3U4/W3PE4/Q3PE4用の地デジ放送iniファイル
+; PX-W3U4/Q3U4/W3PE4/W3PE5/Q3PE4用の地デジ放送iniファイル
 [IT35]
 DebugLog=NO
 
@@ -11,10 +11,12 @@ FriendlyName4="PXQ3U4 Multi Tuner ISDB-T BDA Filter #2"
 FriendlyName5="PXQ3U4 Multi Tuner ISDB-T BDA Filter #3"
 FriendlyName6="PXW3PE4 Multi Tuner ISDB-T BDA Filter #0"
 FriendlyName7="PXW3PE4 Multi Tuner ISDB-T BDA Filter #1"
-FriendlyName8="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #0"
-FriendlyName9="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #1"
-FriendlyName10="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #2"
-FriendlyName11="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #3"
+FriendlyName8="PXW3PE5 Multi Tuner ISDB-T BDA Filter #0"
+FriendlyName9="PXW3PE5 Multi Tuner ISDB-T BDA Filter #1"
+FriendlyName10="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #0"
+FriendlyName11="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #1"
+FriendlyName12="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #2"
+FriendlyName13="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #3"
 Name="PX-x3U4"
 UseSpecial="IT35"
 DVBSystemType="DVB-T"
